# IntuitiveLanguageInterpereter

./: .gitignore  .project  IntuitiveLanguage.cabal  README.md
src/: Main.hs
