name:           IntuitiveLanguage
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         frka

executable IntuitiveLanguage
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec
  ghc-options:     -Wall
